adding post section and authentication

--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,4 +1,4 @@
-<form action="/create-session">
+<form action="/user/create-session" method="post">
     <input type="email" name="email" placeholder="Your Email" required>
     <input type="password" name="password" placeholder="Your Password" required>
     <input type="submit">
