--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,2 +1,26 @@
     <link rel="stylesheet" href="/css/home.css">
     <h1><%=title%></h1>
+    <p>Home Page</p>
+    <section id="feed-posts">
+        <h4>Posts</h4>
+        <% if(locals.user){ %>
+        <form action="/posts/create" id="new-post-form" method="post">
+            <textarea name="content" cols="30" rows="3" placeholder="Write here"></textarea>
+            <input type="submit" value="post">
+        </form>
+        <% } %>
+        <div id="posts-list-container">
+            <ul>
+                <% for(post of posts){ %>
+                    <li>
+                        <%= post.content %>
+                        <br>
+                        <small>
+                        <%= post.user.name %>  
+                        </small>
+                    </li>
+                <%}%>
+            </ul>
+        </div>
+    </section>
+    
